--- a/eldim_technical_test/templates/base.html
+++ b/eldim_technical_test/templates/base.html
@@ -13,6 +13,7 @@
     <script>
       const jsonData = JSON.parse('{{ data|safe }}');
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-enterprise@latest/dist/ag-grid-enterprise.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
